<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.amount.AmountFragment"
    android:background="@color/purple_500"
    android:paddingHorizontal="32dp"
    android:paddingVertical="24dp">

    <TextView
        android:id="@+id/tapToDeleteTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/tap_to_delete"
        android:textColor="@color/transparentWhite"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/amountTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tapToDeleteTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/keyboardWrapLl"
        android:textSize="56sp"
        android:textColor="@color/white"
        android:text="100"
        app:autoSizeTextType="uniform"
        android:textAlignment="center"
        android:gravity="center"
        android:maxLines="1"
        app:autoSizeMaxTextSize="56sp"
        app:autoSizeMinTextSize="20sp" />

    <LinearLayout
        android:id="@+id/keyboardWrapLl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCloseIv"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp"
            android:gravity="center">

            <TextView
                android:id="@+id/numberOne"
                android:layout_width="@dimen/numberButtonSize"
                android:layout_height="@dimen/numberButtonSize"
                android:background="@drawable/bg_number_btn_ripple"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"/>

            <Space
                android:layout_width="@dimen/numberButtonSpacing"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/numberTwo"
                android:layout_width="@dimen/numberButtonSize"
                android:layout_height="@dimen/numberButtonSize"
                android:background="@drawable/bg_number_btn_ripple"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"/>

            <Space
                android:layout_width="@dimen/numberButtonSpacing"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/numberThree"
                android:layout_width="@dimen/numberButtonSize"
                android:layout_height="@dimen/numberButtonSize"
                android:background="@drawable/bg_number_btn_ripple"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp"
            android:gravity="center">
            <TextView
                android:id="@+id/numberFour"
                android:layout_width="@dimen/numberButtonSize"
                android:layout_height="@dimen/numberButtonSize"
                android:background="@drawable/bg_number_btn_ripple"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"/>


            <Space
                android:layout_width="@dimen/numberButtonSpacing"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/numberFive"
                android:layout_width="@dimen/numberButtonSize"
                android:layout_height="@dimen/numberButtonSize"
                android:background="@drawable/bg_number_btn_ripple"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"/>


            <Space
                android:layout_width="@dimen/numberButtonSpacing"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/numberSix"
                android:layout_width="@dimen/numberButtonSize"
                android:layout_height="@dimen/numberButtonSize"
                android:background="@drawable/bg_number_btn_ripple"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp"
            android:gravity="center">

            <TextView
                android:id="@+id/numberSeven"
                android:layout_width="@dimen/numberButtonSize"
                android:layout_height="@dimen/numberButtonSize"
                android:background="@drawable/bg_number_btn_ripple"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"/>

            <Space
                android:layout_width="@dimen/numberButtonSpacing"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/numberEight"
                android:layout_width="@dimen/numberButtonSize"
                android:layout_height="@dimen/numberButtonSize"
                android:background="@drawable/bg_number_btn_ripple"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"/>


            <Space
                android:layout_width="@dimen/numberButtonSpacing"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/numberNine"
                android:layout_width="@dimen/numberButtonSize"
                android:layout_height="@dimen/numberButtonSize"
                android:background="@drawable/bg_number_btn_ripple"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp"
            android:gravity="center">

            <TextView
                android:id="@+id/decimalPoint"
                android:layout_width="@dimen/numberButtonSize"
                android:layout_height="@dimen/numberButtonSize"
                android:background="@drawable/bg_number_btn_ripple"
                android:text="@string/decimal"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"/>

            <Space
                android:layout_width="@dimen/numberButtonSpacing"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/numberZero"
                android:layout_width="@dimen/numberButtonSize"
                android:layout_height="@dimen/numberButtonSize"
                android:background="@drawable/bg_number_btn_ripple"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"/>


            <Space
                android:layout_width="@dimen/numberButtonSpacing"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/doneBtn"
                android:layout_width="@dimen/numberButtonSize"
                android:layout_height="@dimen/numberButtonSize"
                android:background="@drawable/bg_done_btn_ripple"
                android:src="@drawable/ic_done"
                android:textSize="30sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                app:tint="@color/done_btn_color"
                android:padding="16dp"/>


        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/btnCloseIv"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_keyboard_arrow_down"
        app:tint="@color/transparentWhite"
        android:contentDescription="@string/close"
        android:clickable="true"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>