<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".ui.ConverterFragment"
    android:clipToPadding="false">

    <TextView
        android:id="@+id/fromTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/from"
        android:textAllCaps="true"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/fromCurrencyWrap"
        app:layout_constraintEnd_toEndOf="@id/fromCurrencyWrap"
        app:layout_constraintStart_toStartOf="@id/fromCurrencyWrap" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fromCurrencyWrap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_card_dark"
        android:paddingHorizontal="24dp"
        android:paddingVertical="24dp"
        app:layout_constraintBottom_toTopOf="@id/mcvBtnSwap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">


        <TextSwitcher
            android:id="@+id/fromCurrencyTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="4dp"
            android:focusable="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_arrow_drop_down_white"
            app:drawableTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="US Dollar" />


        <TextView
            android:id="@+id/fromCurrencyAmountTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:gravity="start|center"
            android:maxLines="1"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="56sp"
            app:autoSizeMaxTextSize="56sp"
            app:autoSizeMinTextSize="24sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fromCurrencySymbolTv"
            app:layout_constraintTop_toBottomOf="@id/fromCurrencyTitleTv"
            app:layout_constraintHorizontal_bias="0.0"
            tools:text="100.00"
            app:drawableEndCompat="@drawable/ic_edit"
            app:drawableTint="@color/white"
            />

        <TextSwitcher
            android:id="@+id/fromCurrencySymbolTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/transparentWhite"
            android:textSize="28sp"
            app:layout_constraintBaseline_toBaselineOf="@id/fromCurrencyAmountTv"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="$" />

        <TextSwitcher
            android:id="@+id/fromCurrencyCodeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/transparentWhite"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/fromCurrencyTitleTv"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="USD" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/to"
        android:textAllCaps="true"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/toCurrencyWrap"
        app:layout_constraintEnd_toEndOf="@id/toCurrencyWrap"
        app:layout_constraintStart_toStartOf="@id/toCurrencyWrap" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toCurrencyWrap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_card_light"
        android:paddingHorizontal="24dp"
        android:paddingVertical="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mcvBtnSwap"
        app:layout_constraintVertical_bias="0.0">

        <TextSwitcher
            android:id="@+id/toCurrencyCodeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/transparentPurple"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@id/toCurrencyTitleTv"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="INR" />


        <TextView
            android:id="@+id/toCurrencyAmountTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:gravity="start|center"
            android:maxLines="1"
            android:textAlignment="textStart"
            android:textColor="@color/purple_500"
            android:textSize="56sp"
            app:autoSizeMaxTextSize="56sp"
            app:autoSizeMinTextSize="24sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/toCurrencySymbolTv"
            app:layout_constraintTop_toBottomOf="@id/toCurrencyTitleTv"
            tools:text="100.00" />


        <TextSwitcher
            android:id="@+id/toCurrencySymbolTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:textColor="@color/transparentPurple"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@id/toCurrencyAmountTv"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="$" />

        <TextSwitcher
            android:id="@+id/toCurrencyTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_arrow_drop_down_white"
            app:drawableTint="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Indian Rupees" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/green_700"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/toCurrencyAmountTv"
            app:layout_constraintStart_toStartOf="@id/toCurrencyAmountTv"
            app:layout_constraintEnd_toEndOf="@id/toCurrencyAmountTv"
            app:layout_constraintTop_toTopOf="@id/toCurrencyAmountTv"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvBtnSwap"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="32dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:contentDescription="@string/swap"
            android:src="@drawable/ic_swap" />
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>